updated collection and profile

--- a/TaskB/collection.html
+++ b/TaskB/collection.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Deck Builder - My Collection</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="decks.css">
 </head>
 <body>
     <!-- Navigation Header -->
@@ -28,7 +29,7 @@
     <div class="cards-container">
         <div class="cards-header">
             <h1>My Collection</h1>
-            <p>Manage your personal card collection</p>
+            <a href="addCard.html" class="new-deck-btn">+ Add Card</a>
         </div>
         <!-- Collection Stats -->
         <div class="collection-stats">
@@ -42,18 +43,6 @@
                 <div class="stat-content">
                     <h3>Unique Cards</h3>
                     <p class="stat-number">52</p>
-                </div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-content">
-                    <h3>Rare Cards</h3>
-                    <p class="stat-number">36</p>
-                </div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-content">
-                    <h3>Ultra Rare</h3>
-                    <p class="stat-number">15</p>
                 </div>
             </div>
         </div>
@@ -164,6 +153,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- Pagination -->
         <div class="pagination">
