added scroll function

--- a/Final Demo/addCard.html
+++ b/Final Demo/addCard.html
@@ -6,7 +6,7 @@
     <title>Pokemon Deck Builder - Add Card</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="scrollable-page">
     <!-- Navigation Header -->
     <nav class="navbar">
         <div class="nav-container">
