--- a/Final Demo/collection.html
+++ b/Final Demo/collection.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="decks.css">
 </head>
-<body>
+<body class="scrollable-page">
     <!-- Navigation Header -->
     <nav class="navbar">
         <div class="nav-container">
