--- a/Final Demo/browseCard.html
+++ b/Final Demo/browseCard.html
@@ -19,7 +19,7 @@
                 <a href="browseCard.html" class="nav-link active">Browse Cards</a>
                 <a href="collection.html" class="nav-link">Collection</a>
                 <a href="profile.html" class="nav-link">Profile</a>
-                <a href="LoginPage.html" class="nav-link logout">Logout</a>
+                <a href="index.html" class="nav-link logout">Logout</a>
             </div>
         </div>
     </nav>
@@ -136,6 +136,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- Pagination -->
         <div class="pagination">
