--- a/Final Demo/dashboard.html
+++ b/Final Demo/dashboard.html
@@ -19,7 +19,7 @@
                 <a href="browseCard.html" class="nav-link">Browse Cards</a>
                 <a href="collection.html" class="nav-link">Collection</a>
                 <a href="profile.html" class="nav-link">Profile</a>
-                <a href="LoginPage.html" class="nav-link logout">Logout</a>
+                <a href="index.html" class="nav-link logout">Logout</a>
             </div>
         </div>
     </nav>
