Implement browse cards functionality and added sample cards to create.sql

--- a/Final Demo/browseCard.html
+++ b/Final Demo/browseCard.html
@@ -2,12 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=browse_cards.php">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>Redirecting to the new search page...</p>
+    <script>
+        window.location.href = 'browse_cards.php';
+    </script>
+</body>
+</html>
+
+<!-- Your comment content goes here <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Deck Builder - Browse Cards</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="scrollable-page">
-    <!-- Navigation Header -->
+    <!-- Navigation Header 
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
@@ -24,13 +39,13 @@
         </div>
     </nav>
 
-    <!-- Browse Cards Container -->
+    <!-- Browse Cards Container 
     <div class="cards-container">
         <div class="cards-header">
             <h1>Browse Cards</h1>
         </div>
 
-        <!-- Filters Section -->
+        <!-- Filters Section 
         <div class="filters-section">
             <div class="filter-group">
                 <label for="card-type">Card Type</label>
@@ -84,9 +99,9 @@
             </div>
         </div>
 
-        <!-- Cards Grid -->
+        <!-- Cards Grid 
         <div class="cards-grid">
-            <!-- Card Item -->
+            <!-- Card Item 
             <div class="card-item">
                 <div class="card-image">
                     <img src="charizard.jpg" alt="Charizard">
@@ -103,7 +118,7 @@
                 </div>
             </div>
 
-            <!-- Card Item -->
+            <!-- Card Item 
             <div class="card-item">
                 <div class="card-image">
                     <img src="blastoise.jpg" alt="Blastoise">
@@ -120,7 +135,7 @@
                 </div>
             </div>
 
-            <!-- Card Item -->
+            <!-- Card Item 
             <div class="card-item">
                 <div class="card-image">
                     <img src="venusaur.jpg" alt="Venusaur">
@@ -138,7 +153,7 @@
             </div>
         </div>
 
-        <!-- Pagination -->
+        <!-- Pagination 
         <div class="pagination">
             <button class="page-btn">Previous</button>
             <span class="page-info">Page 1 of 1</span>
@@ -146,4 +161,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
