updated all nav link & added logout.php

--- a/Final Demo/addCard.html
+++ b/Final Demo/addCard.html
@@ -14,12 +14,12 @@
                 <span>PokéDeck Builder</span>
             </div>
             <div class="nav-links">
-                <a href="dashboard.html" class="nav-link">Dashboard</a>
+                <a href="dashboard.php" class="nav-link">Dashboard</a>
                 <a href="mydecks.html" class="nav-link">My Decks</a>
-                <a href="browseCard.html" class="nav-link">Browse Cards</a>
+                <a href="browse_cards.php" class="nav-link">Browse Cards</a>
                 <a href="collection.html" class="nav-link active">Collection</a>
                 <a href="profile.html" class="nav-link">Profile</a>
-                <a href="index.html" class="nav-link logout">Logout</a>
+                <a href="logout.php" class="nav-link logout">Logout</a>
             </div>
         </div>
     </nav>
