add rest of functions

--- a/Final Demo/profile.html
+++ b/Final Demo/profile.html
@@ -17,7 +17,7 @@
                 <a href="dashboard.php" class="nav-link">Dashboard</a>
                 <a href="mydecks.html" class="nav-link">My Decks</a>
                 <a href="browse_cards.php" class="nav-link">Browse Cards</a>
-                <a href="collection.html" class="nav-link">Collection</a>
+                <a href="collection.php" class="nav-link">Collection</a>
                 <a href="profile.html" class="nav-link">Profile</a>
                 <a href="logout.php" class="nav-link logout">Logout</a>
             </div>
