--- a/Final Demo/profile.html
+++ b/Final Demo/profile.html
@@ -6,7 +6,7 @@
     <title>Pokemon Deck Builder - Profile</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="scrollable-page">
+<body>
     <!-- Navigation Header -->
     <nav class="navbar">
         <div class="nav-container">
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <a href="dashboard.php" class="nav-link">Dashboard</a>
-                <a href="mydecks.html" class="nav-link">My Decks</a>
+                <a href="mydecks.php" class="nav-link">My Decks</a>
                 <a href="browse_cards.php" class="nav-link">Browse Cards</a>
                 <a href="collection.php" class="nav-link">Collection</a>
                 <a href="profile.html" class="nav-link">Profile</a>
@@ -29,7 +29,6 @@
         <div class="profile-header">
             <h1>My Profile</h1>
         </div>
-
         <!-- Profile Content -->
         <div class="profile-content">
             <!-- Account Information -->
@@ -38,11 +37,11 @@
                 <form class="profile-form" action="updateProfile.php" method="POST">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" id="username" name="username" required>
+                        <input type="text" id="username" name="username">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email">
                     </div>
                     <button type="submit" name="update_account" class="save-btn">Save Changes</button>
                 </form>
